--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
-  "name": "ikinci",
+  "homepage": "https://furkancakici.github.io/UserApp-ReactJs/",
+  "name": "userapp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -7,6 +8,7 @@
     "@testing-library/react": "^9.4.0",
     "@testing-library/user-event": "^7.2.1",
     "axios": "^0.19.2",
+    "gh-pages": "^2.2.0",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-pose": "^4.0.10",
@@ -15,6 +17,8 @@
     "uniqid": "^5.2.0"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
